Refactor embedding retrieval to handle multiple embeddings and improve logging